# LangOCR

./: .gitignore  CMakeLists.txt  README.md
gui/: screen_overlay.cpp
server/: daemonize_process.h
